# python-sdk

./: .fossa.yml  .gitignore  .openapi-generator-ignore  .pre-commit-config.yaml  .snyk  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE.txt  README.md  VERSION.txt  batch_test.py  pyproject.toml  release-please-config.json  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/: SECURITY-INSIGHTS.yml  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md
.github/ISSUE_TEMPLATES/: bug_report.md
.github/workflows/: codeql.yml  main.yaml  pr-title-conventional-commit.yml  python.yml  scorecard.yml
.openapi-generator/: FILES
docs/: AbortedMessageResponse.md  Any.md  Assertion.md  AssertionTupleKey.md  AuthErrorCode.md  AuthorizationModel.md  BatchCheckChecks.md  BatchCheckItem.md  BatchCheckRequest.md  BatchCheckResponse.md  BatchCheckSingleResult.md  CheckError.md  CheckRequest.md  CheckRequestTupleKey.md  CheckResponse.md  Computed.md  Condition.md  ConditionMetadata.md  ConditionParamTypeRef.md  ConsistencyPreference.md  ContextualTupleKeys.md  CreateStoreRequest.md  CreateStoreResponse.md  Difference.md  ErrorCode.md  ExpandRequest.md  ExpandRequestTupleKey.md  ExpandResponse.md  FgaObject.md  ForbiddenResponse.md  GetStoreResponse.md  InternalErrorCode.md  InternalErrorMessageResponse.md  Leaf.md  ListObjectsRequest.md  ListObjectsResponse.md  ListStoresResponse.md  ListUsersRequest.md  ListUsersResponse.md  Metadata.md  (+53 more)
example/: Makefile  README.md
example/example1/: auth-model.json  example1.py  requirements.txt  setup.py
example/execute-api-request/: execute_api_request_example.py
example/opentelemetry/: .env.example  README.md  main.py  requirements.txt  setup.py
example/streamed-list-objects/: .env.example  README.md  asynchronous.py  example.py  model.json  requirements.txt  setup.py  synchronous.py
openfga_sdk/: __init__.py  _version.py  api_client.py  configuration.py  constants.py  credentials.py  exceptions.py  exceptions_specific.py  factory.py  help.py  model_utils.py  oauth2.py  oauth2_common.py  protocols.py  rest.py  validation.py
openfga_sdk/api/: __init__.py  open_fga_api.py
openfga_sdk/apis/: __init__.py
openfga_sdk/client/: __init__.py  batch_check_response.py  check_request_body.py  client.py  client_configuration.py  client_tuple_key.py  client_write_request.py  (+12 more)
openfga_sdk_sync/: __init__.py  api_client.py  configuration.py  credentials.py  exceptions.py  rest.py
test/: __init__.py  configuration_test.py  conftest.py  constants_consistency_test.py  credentials_test.py  error_handling_test.py  error_integration_test.py  oauth2_test.py  rest_test.py  sync_test_client.py  sync_test_credentials.py  sync_test_open_fga_api.py  test_client.py  test_client_sync.py  test_configuration.py  test_credentials.py  test_credentials_sync.py  test_model_utils.py  test_oauth2.py  test_oauth2_sync.py  test_open_fga_api.py  test_open_fga_api_sync.py  test_open_fga_client.py  test_openfga_client.py  test_validation.py  validation_test.py
(+306 files in other folders)
